--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -16,10 +16,11 @@ tabs:
   archives: Archives
   about: About
 
-# text displayed in the search bar
+# the text displayed in the search bar & search results
 search:
   hint: search
   cancel: Cancel
+  no_results: Oops! No result founds.
 
 panel:
   lastmod: Recent Update
@@ -61,9 +62,9 @@ post:
   published: 'on'
   updated: Updated
   timeago:
-    day: d ago
-    hour: hr ago
-    minute: min ago
+    day: days ago
+    hour: hours ago
+    minute: minutes ago
     just_now: just now
   words: words
   pageview_measure: views
@@ -75,9 +76,7 @@ post:
   button:
     next: Newer
     previous: Older
-    copy:
-      title: Copy link
-      succeed: Link copied successfully!
+    copy: Copied!
   # pinned prompt of posts list on homepage
   pin_prompt: Pinned
 
