--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -59,7 +59,8 @@ not_found:
 # ----- Posts related labels -----
 
 post:
-  published: 'on'
+  written_by: By
+  posted: Posted
   updated: Updated
   timeago:
     day: days ago
@@ -76,7 +77,11 @@ post:
   button:
     next: Newer
     previous: Older
-    copy: Copied!
+    copy_code:
+      succeed: Copied!
+    share_link:
+      title: Copy link
+      succeed: Link copied successfully!
   # pinned prompt of posts list on homepage
   pin_prompt: Pinned
 
