--- a/_data/locales/id-ID.yml
+++ b/_data/locales/id-ID.yml
@@ -59,7 +59,8 @@ not_found:
 # ----- Posts related labels -----
 
 post:
-  published: "pada"
+  written_by: Oleh
+  posted: Diterbitkan
   updated: Diperbarui
   timeago:
     day: hari yang lalu
@@ -76,7 +77,11 @@ post:
   button:
     next: Terbaru
     previous: Terlama
-    copy: Disalin!
+    copy_code:
+      succeed: Disalin!
+    share_link:
+      title: Salin tautan
+      succeed: Tautan berhasil disalin!
   # pinned prompt of posts list on homepage
   pin_prompt: Disematkan
 
